# chaudloader

./: API.md  Cargo.toml  LICENSE  README.md  download_and_build_lua.ps1  download_and_build_lua.py  make_dist.py  make_dist_zip.py
.cargo/: config.toml
.github/workflows/: release.yaml
bnlc-mod-loader/: Cargo.toml
bnlc-mod-loader-installer/: Cargo.toml
bnlc-mod-loader-installer/src/: main.rs
bnlc-mod-loader/mods/example/: info.toml  init.lua
bnlc-mod-loader/src/: assets.rs  config.rs  datfile.rs  hooks.rs  lib.rs  mods.rs
bnlc-mod-loader/src/assets/: dat.rs  mpak.rs
bnlc-mod-loader/src/hooks/: stage0.rs  stage1.rs
bnlc-mod-loader/src/mods/: lua.rs
bnlc-mod-loader/src/mods/lua/: bnlc_mod_loader_lib.rs
chaudloader/: Cargo.toml
chaudloader-installer/: Cargo.toml  build.rs  linux-install.desktop
chaudloader-installer/src/: main.rs
chaudloader/src/: assets.rs  config.rs  console.rs  gui.rs  hooks.rs  lib.rs  mods.rs  path.rs  pattern_search.rs
chaudloader/src/assets/: exedat.rs  mpak.rs  msg.rs  textarchive.rs
chaudloader/src/gui/: flow_scroll.rs  flow_table.rs  mod_table.rs  mod_widget.rs
chaudloader/src/hooks/: stage0.rs  stage1.rs
chaudloader/src/mods/: lua.rs
chaudloader/src/mods/lua/: bnlc_mod_loader_lib.rs  chaudloader_lib.rs  compat.lua  compat0_7.lua  lib.rs
chaudloader/src/mods/lua/lib/: bnlc_mod_loader.rs  chaudloader.rs
chaudloader/src/mods/lua/lib/chaudloader/: bnk.rs  buffer.rs  bytearray.rs  exedat.rs  modfiles.rs  mpak.rs  msg.rs  pck.lua  pck.rs  unsafe.rs  util.lua
dxgi-shim/: Cargo.toml  README.md
dxgi-shim/src/: lib.rs
src/: d3d11_shim.rs  datfile.rs  dl.rs  dxgi_shim.rs  hooks.rs  lib.rs  modules.rs
src/hooks/: stage0.rs  stage1.rs
windows-libloader/: Cargo.toml
windows-libloader/src/: lib.rs
xinput1_4-shim/: Cargo.toml  README.md
xinput1_4-shim/src/: lib.rs
