[package]
name = "bnlc-mod-loader"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
retour = "0.1"
anyhow = "1"
winapi = { version = "0.3.9", features = ["dxgi"] }
log = "0.4"
env_logger = "0.9.0"
thiserror = "1"
zip = "0.6"
tempfile = "3"
clean-path = "0.2"
windows-libloader = { path = "../windows-libloader" }
const_format = "0.2"
mlua = { version = "0.8", features = ["lua54", "vendored"] }
serde = { version = "1", features = ["derive"] }
toml = "0.4"
byteorder = "1"
indexmap = "1"
