[package]
name = "chaudloader"
version = "0.8.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
retour = "0.1"
anyhow = "1"
winapi = { version = "0.3.9", features = ["winuser", "namedpipeapi"] }
log = "0.4"
env_logger = "0.9.0"
thiserror = "1"
zip = "0.6"
clean-path = "0.2"
windows-libloader = { path = "../windows-libloader" }
const_format = "0.2"
mlua = { version = "0.9.0-beta.1", features = ["lua54"] }
serde = { version = "1", features = ["derive"] }
toml = "0.4"
byteorder = "1"
indexmap = "1"
semver = { version = "1", features = ["serde"] }
serde_plain = "1"
crc32fast = "1"
fltk = { version = "1", features = ["fltk-bundled"] }
fltk-theme = "0.4"
oneshot = "0.1"
get-last-error = "0.1"
