[package]
name = "chaudloader"
version = "0.13.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
retour = { version = "0.3", features = ["static-detour"] }
anyhow = "1"
winapi = { version = "0.3.9", features = ["winuser", "namedpipeapi"] }
log = "0.4"
env_logger = "0.9.0"
thiserror = "1"
zip = "0.6"
clean-path = "0.2"
windows-libloader = { path = "../windows-libloader" }
mlua = { version = "0.9.0-beta.1", features = ["lua54", "serialize"] }
serde = { version = "1", features = ["derive"] }
toml = "0.4"
byteorder = "1"
indexmap = "1"
semver = { version = "1", features = ["serde"] }
serde_plain = "1"
crc32fast = "1"
fltk = "1"
fltk-theme = "0.4"
oneshot = "0.1"
get-last-error = "0.1"
pulldown-cmark = "0.9"
maud = "0.25"
url = "2"
opener = "0.6"
proc-macro2 = "^1.0.60"
run_script = "0.10.1"
object = "0.32.1"
region = "3.0.0"
strip-ansi-escapes = "0.2"
